--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@900&family=Rubik:wght@800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&family=Rubik:wght@800&display=swap");
 
 * {
   margin: 0;
@@ -18,6 +18,11 @@ header {
   width: 100%;
   height: 5rem;
   display: flex;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 
 nav {
@@ -60,8 +65,14 @@ a:hover {
 
 h1 {
   font-family: "Rubik", sans-serif;
+  font-weight: 800;
   color: white;
   font-size: 3rem;
+}
+
+h2 {
+  font-family: "Rubik", sans-serif;
+  font-weight: 800;
 }
 
 .info {
