--- a/pages/cultura.css
+++ b/pages/cultura.css
@@ -1,11 +1,17 @@
 .container img {
-    position: relative;
-    width: 100%;
-    height: 50rem;
+  position: relative;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .content {
-    position: absolute;
-    top: 50%;
-    background-color: black;
+  position: absolute;
+  top: 50%;
+  left: 85vh;
+}
+
+.textContainer {
+  text-align: justify;
+  margin: 1rem 0 1rem 1.5rem;
 }
