--- a/pages/historia.css
+++ b/pages/historia.css
@@ -13,3 +13,18 @@
   width: 50rem;
   height: 6rem;
 }
+
+.killxd {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+span {
+  color: rgb(246, 197, 0);
+}
+
+h2 {
+  padding: 1rem;
+}
