--- a/pages/historia.css
+++ b/pages/historia.css
@@ -27,7 +27,7 @@
 }
 
 .killxd p {
-  text-align: center;
+  text-align: left;
   font-size: large;
   margin: 1rem;
 }
@@ -36,7 +36,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
 }
 
 .content li {
