--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 .slickImgs img {
   height: 940px;
-  filter: brightness(40%);
+  filter: brightness(40%) contrast(115%);
 }
 
 header {
@@ -27,7 +27,6 @@ p {
 
 nav {
   width: 100%;
-
   display: flex;
   flex-direction: row;
   align-items: center;
