--- a/pages/atracoes.css
+++ b/pages/atracoes.css
@@ -68,6 +68,18 @@
   border-radius: 0.5rem;
   color: white;
 }
+
+#poggers:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
 option {
   color: black;
   padding: 8px 16px;
