--- a/pages/atracoes.css
+++ b/pages/atracoes.css
@@ -1,12 +1,3 @@
-@keyframes button {
-  from {
-    background: rgb(228, 115, 115);
-  }
-  to {
-    background: transparent;
-  }
-}
-
 .content {
   height: 100%;
   width: 100%;
@@ -70,10 +61,7 @@
 }
 
 #poggers:after {
-  position: absolute;
   content: "";
-  top: 14px;
-  right: 10px;
   width: 0;
   height: 0;
   border: 6px solid transparent;
@@ -89,35 +77,29 @@ option {
   user-select: none;
 }
 
+.buttonContainer button:hover {
+  background: linear-gradient(180deg, rgb(228, 115, 115), rgb(252, 88, 88));
+  color: #fff;
+}
 .buttonContainer button {
   height: 2.6rem;
   border: 0;
   cursor: pointer;
   padding: 0 1rem 0 1rem;
-
   font-family: "Rubik", sans-serif;
   font-weight: 800;
-  background-image: linear-gradient(
-    180deg,
-    rgb(228, 115, 115),
-    rgb(252, 88, 88)
-  );
   background-size: 100%;
+  transition: 1s;
 }
 
-.buttonContainer button:hover {
-  background: linear-gradient(180deg, rgb(228, 115, 115), rgb(252, 88, 88));
-  color: #fff;
-}
 .buttonContainer {
   padding: 3px;
-  background: radial-gradient(180deg, rgb(228, 115, 115), rgb(252, 88, 88));
   margin-top: 1rem;
   border-radius: 3px;
+  background: linear-gradient(180deg, rgb(228, 115, 115), rgb(252, 88, 88));
   animation: button;
   transition: 2s;
 }
-.buttonContainer button {
-  animation: button;
-  transition: 1s;
+.buttonContainer:hover {
+  background: transparent;
 }
