--- a/pages/atracoes.css
+++ b/pages/atracoes.css
@@ -77,29 +77,30 @@ option {
   user-select: none;
 }
 
-.buttonContainer button:hover {
-  background: linear-gradient(180deg, rgb(228, 115, 115), rgb(252, 88, 88));
-  color: #fff;
-}
 .buttonContainer button {
   height: 2.6rem;
   border: 0;
   cursor: pointer;
-  padding: 0 1rem 0 1rem;
+  padding: 0 1.5rem 0 1.5rem;
   font-family: "Rubik", sans-serif;
   font-weight: 800;
   background-size: 100%;
   transition: 1s;
+  border-radius: 5px;
+}
+
+.buttonContainer button:hover {
+  background: rgb(252, 88, 88);
+  color: #fff;
 }
 
 .buttonContainer {
   padding: 3px;
   margin-top: 1rem;
-  border-radius: 3px;
+  border-radius: 8px;
   background: linear-gradient(180deg, rgb(228, 115, 115), rgb(252, 88, 88));
-  animation: button;
-  transition: 2s;
 }
+
 .buttonContainer:hover {
-  background: transparent;
+  background: rgb(252, 88, 88);
 }
