--- a/pages/economia.css
+++ b/pages/economia.css
@@ -1,10 +1,46 @@
-.text {
+.content h1 {
   width: 100%;
-  margin-top: 38rem;
-  margin-bottom: 2rem;
+  position: absolute;
+  top: 28%;
+  display: flex;
+  justify-content: center;
 }
 
-h1 {
-  color: white;
-  position: absolute;
+.content img {
+  width: 100%;
+  height: 940px;
+}
+
+h2 {
+  text-align: center;
+  margin: 3rem 0;
+  font-size: x-large;
+}
+
+.textContainer {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: space-between;
+  margin: 3rem 0;
+  gap: 5rem;
+}
+
+.text {
+  padding: 0 3rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text p {
+  border-radius: 0.5rem;
+  height: 25rem;
+  background: var(--color-white-gray);
+  font-size: 1.5rem;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  padding: 2rem; 
 }
