--- a/pages/governo.css
+++ b/pages/governo.css
@@ -1,14 +1,31 @@
-.slickImgs {
-  position: absolute;
-  top: -20rem;
-  z-index: 99;
+.content img {
   width: 100%;
   height: 940px;
-  filter: brightness(40%);
+  filter: brightness(50%);
+}
+
+.content h1 {
+  width: 100%;
+  position: absolute;
+  top: 10rem;
+  display: flex;
+  justify-content: center;
+  z-index: 999;
 }
 
 .text {
-  width: 100%;
-  margin-top: 38rem;
-  margin-bottom: 3rem;
+  margin: 4.5rem 0;
+}
+
+.text h2 {
+  text-align: center;
+}
+
+.textContainer {
+  margin: 4rem 0 5rem 0;
+}
+
+.textContainer p {
+  padding: 2rem 8rem;
+  font-size: larger;
 }
