--- a/pages/atracoes.css
+++ b/pages/atracoes.css
@@ -87,7 +87,7 @@ option {
   font-family: "Rubik", sans-serif;
   font-weight: 800;
   background-size: 100%;
-  transition: 1s;
+  transition: 500ms;
   border-radius: 5px;
 }
 
