--- a/style.css
+++ b/style.css
@@ -18,8 +18,12 @@ header {
   width: 100%;
   height: 5rem;
   display: flex;
+  transition: 500ms;
 }
 
+header:hover{
+  background: rgba(0, 0, 0, 0.452);
+}
 p {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
